# pan

./: .gitignore  Cargo.toml  README  README.md
.devcontainer/: Dockerfile  devcontainer.json
src/: common.rs  error.rs  lib.rs  macros.rs  main.rs  recipe.rs
src/common/: mass.rs  mod.rs  percent.rs
src/ingredient/: enrichment.rs  flour.rs  ingredient.rs  mod.rs  poolish.rs  salt.rs  starter.rs  tangzhong.rs  water.rs
src/ingredient/preferment/: builder.rs  mod.rs  preferment.rs  starter.rs  tangzhong.rs
