[package]
name = "pn"
about = "Sourdough bread recipe generator"
version = "0.1.0"
edition = "2021"
author = "perplexedpigmy <perplexedpigmy@xmousse.com>"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
clap = { version = "^4.4.5", features = ["cargo", "derive", "unicode", "wrap_help"]}
# clap = { version = "^4.4.5"}
simple-eyre = "^0.3"

