[package]
name = "pn"
description = "Bread recipe generator"
version = "0.1.0"
edition = "2021"
authors = [ "perplexedpigmy <perplexedpigmy@xmousse.com>" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.5.0"
clap = { version = "^4.5.20", features = ["cargo", "derive", "unicode", "wrap_help"]}
simple-eyre = "^0.3"
capitalize = "0.1.0"
colored = "2.1.0"
syn = { version = "2.0.79", features = ["full"] }
rust_decimal = "1.36.0"
rust_decimal_macros = "1.36.0"
thiserror = "1.0.64"
num-traits = "0.2.19"
arbtest = "0.3.1"
prettytable-rs = "0.10.0"

[dev-dependencies]
arbtest = "0.3.1"
rand = "0.8.5"
